--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta property="og:title" content="Магічний світ тварин">
+    <meta property="og:description" content="Дізнайся про дивовижних тварин,їх ососбливості та магічні історії!">
+    <meta property="og:image" content="https//SourTaras.github.io/lesson6.5/завантаження(45).jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:url" content="https//SourTaras.github.io/lesson6.5/">
+    <meta property="og:type" content="website">
+    <title>Магічний світ тварин</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
